syntax = "proto3";

option csharp_namespace = "RaceServer";

package race;

service GameService {
	rpc JoinRoom (JoinRoomRequest) returns (JoinRoomResponse);
	rpc RoomStream (RoomStreamRequest) returns (stream RoomStreamResponse);
}

message RoomUser {
	string name = 1;
	string role = 2;
	bool host = 3;
}

message JoinRoomRequest {
	string name = 1;
	string role = 2;
	bool host = 3;
}

message JoinRoomResponse {
	string message = 1;
	RoomUser myself = 2;
}

message RoomStreamRequest {
	string name = 1;
	string role = 2;
	bool host = 3;
}

message RoomStreamResponse {
	string message = 1;
	repeated RoomUser users = 2;
}