syntax = "proto3";

option csharp_namespace = "RaceServer";

package race;

// The greeting service definition.
service RoomHandler
{
	// Sends a greeting
    rpc JoinRoom (JoinRequest) returns (JoinResponse);
}

// The request message containing the user's name.
message JoinRequest
{
    string name = 1;
}

// The response message containing the greetings.
message JoinResponse
{
    string message = 1;
}
